# Infotecs

./: .gitignore  CMakeLists.txt  Vagrantfile  compile.yml  compile_unix.sh  compile_win.bat  readme.txt
logs_example/: CMakeConfigureLog.yaml
provisioning/: compile.yml
provisioning/roles/compile/tasks/: main.yml
provisioning/roles/init/tasks/: main.yml
provisioning/src/: CMakeLists.txt  Dockerfile
